fix: fixed navbar logo on mobile screens by using a media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ h2 {
 @media only screen and (max-width: 767px) {
     /* nav */
     .navbar-brand {
-        font-size: 2rem;
+        font-size: 1.4rem;
         letter-spacing: 10px;
     }
 }
